# studio-chat-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/studio_chat_plugin/: __init__.py  cli.py
src/studio_chat_plugin/tests/: test_cli.py
